# ros_report

./: .gitignore  .gitlab-ci.yml  .make_deb.sh  README.md
robot_wx/: need.md  wx_udp_server.py
ros_report/: CMakeLists.txt  package.xml
ros_report/launch/: WeChatRobot.py  report_ros2.launch.py
ros_report/src/: report.cpp
wechat_robot/: .make_deb.sh  package.xml  setup.cfg  setup.py
wechat_robot/launch/: wechat_robot.launch.py
wechat_robot/wechat_robot/: RobotSubscriber.py  client_udp.py  wechat_robot.py
